[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "who-data-lakehouse"
version = "0.1.0"
description = "Bulk download and cleaning pipeline for WHO public data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
who-data = "who_data_lakehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
